# silly-robot

./: Arduino.ino  Cargo.toml  README.md  TODO.md  rust-toolchain.toml
Application Comms/server/: pom.xml
Application Comms/server/src/main/java/com/example/: App.java  Server.java
Application/silly-bot/: pom.xml
Application/silly-bot/src/main/java/: module-info.java
Application/silly-bot/src/main/java/silly/bot/: App.java  Block.java  BlockPaths.java  Editor.java  NotePicker.java  Parameter.java  PrimaryController.java  SecondaryController.java  Server.java
Arduino/: Arduino.ino  Cargo.toml  Ravedude.toml  Reader.cpp  Reader.h  Sphero.cpp  Sphero.h  old.ino  test.json
Arduino Temp/silly-bot-temp/: Cargo.toml
Arduino Temp/silly-bot-temp/src/: block.rs  main.rs  sphero.rs
Arduino/.cargo/: config.toml
Arduino/ShowcaseTemp/: ShowcaseTemp.ino  Sphero.cpp  Sphero.h
Arduino/WiFi Testing/ConnectWPA/: ConnectWPA.ino
Arduino/WiFi Testing/WorkingCommunicationsV1/WorkingCommunicationsV1/: WorkingCommunicationsV1.ino
Arduino/WiFi Testing/WorkingCommunicationsV2/: Sphero.h  WorkingCommunicationsV2.ino
Arduino/old/: main.rs  old.ino
Arduino/src/: block.rs  main.rs  sensor-test.rs  sphero.rs  string.rs
src/: main.rs
